ucs-school-import (15.0.0-25) unstable; urgency=low

  * Bug #45024: make school, source_uid and user_role optional in DB
  * do not allow empty school or user_role
  * allow empty or only correct when POSTing below school resource URL
  * use OU specific configuration file
  * calculate source_uid from school name and user_role

 -- Daniel Troeder <troeder@univention.de>  Mon, 07 Aug 2017 13:47:07 +0200

ucs-school-import (15.0.0-24) unstable; urgency=low

  * Bug #45024: remove bashism

 -- Daniel Troeder <troeder@univention.de>  Sat, 05 Aug 2017 15:05:02 +0200

ucs-school-import (15.0.0-23) unstable; urgency=low

  * Bug #45024: add support for school/role restrictions
  * remove unneeded features
  * remove per job hook support
  * remove per job configuration file support
  * reduce models
  * handle existing super administrator in join script
  * Bug #45022: add update() method to fetch new data from API
  * enhance repr output

 -- Daniel Troeder <troeder@univention.de>  Sat, 05 Aug 2017 14:47:36 +0200

ucs-school-import (15.0.0-22) unstable; urgency=low

  * Bug #45022: allow parameters for latest()
  * fix method doc

 -- Daniel Troeder <troeder@univention.de>  Thu, 03 Aug 2017 19:43:22 +0200

ucs-school-import (15.0.0-21) unstable; urgency=low

  * Bug #45024: add support for paging, filtering and ordering
  * Bug #45022: add support for parameters (paging, filtering, ordering)
  * fix userimportjob.create() result
  * escape path argument
  * check if resource URLs returned at API root match request-URL
  * use ordering and limit in latest() to fetch one 1 resource
  * <resource>.list() now returns an iterator that transparently handles paging

 -- Daniel Troeder <troeder@univention.de>  Thu, 03 Aug 2017 16:02:55 +0200

ucs-school-import (15.0.0-20) unstable; urgency=low

  * Bug #45022: adapt create() to API change
  * rename get_last() to latest()

 -- Daniel Troeder <troeder@univention.de>  Wed, 02 Aug 2017 09:47:49 +0200
