@@ -5,6 +5,7 @@ ucs-school-import (15.0.0-25) unstable; urgency=low
   * allow empty or only correct when POSTing below school resource URL
   * use OU specific configuration file
   * calculate source_uid from school name and user_role
+  * Bug #45022: make source_uid and school optional
 
  -- Daniel Troeder <troeder@univention.de>  Mon, 07 Aug 2017 13:47:07 +0200
 
